fix: button styles and alignment

--- a/frontend/src/components/profile/components/profile-edit/styles.module.scss
+++ b/frontend/src/components/profile/components/profile-edit/styles.module.scss
@@ -29,8 +29,10 @@
     color: #fff;
     font-size: 1.32rem;
     padding: 0.4rem 1.12rem;
-    border-radius: 0.2rem;
+    border-radius: 0.32rem;
+    font-weight: 400;
     cursor: pointer;
+    height: 3rem;
 
     &:hover {
       background-color: #366dc7;
@@ -66,10 +68,10 @@
     border-radius: 0.2rem;
     color: #6c757d;
     display: block;
-    font-size: 1.2rem;
+    font-size: 1.32rem;
     font-weight: 400;
     line-height: 1.625;
-    padding: 0.25rem 0.7rem;
+    padding: 0.4rem 1.12rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     width: 100%;
   }
@@ -90,7 +92,7 @@
   }
 
   .uploadIcon {
-    font-size: 1.75rem;
+    font-size: 1.6rem;
     max-height: 100%;
   }
 }
